--- a/src/theory/3.md
+++ b/src/theory/3.md
@@ -32,3 +32,9 @@ Variables/Переменные
 <=	       меньше или равно	a <= b
 >=      	больше или равно	a >= b
 
+
+Константы - Это идентификаторы со значениями которые не будут изменяться во время выполнения.
+const - квалификатор
+
+
+
