--- a/src/theory/4.md
+++ b/src/theory/4.md
@@ -8,3 +8,7 @@ arrays / массивы
 Элементы непрерывны в памяти...Значит что весь массив представляет собой последовательный блок адресов памяти
 //ch02 > 02_08b
 
+strings / строки
+в языке С строки представляют собой массивы символов, то есть последовательность символов, которые заканчиваются на нулевой символ, который кодируется как ноль. 
+
+Класс string / std::string в стандартной библиотеке С++ это модель для строк с большими кол-ством ф-ций. 
