--- a/src/theory/6.md
+++ b/src/theory/6.md
@@ -14,3 +14,29 @@
 5) Объектные файлы отправляются в третью основуную программу компиляции - компоновщик
 его задача соединить необходимые объектные файлы вместе и создать исполняемый файл и мы уже можем запускать его.
 
+
+
+Pointers/ Указатели
+Основы
+Указатель - особый тип переменных который содержит адрес памяти
+
+int x = 42;      // обычная переменная
+int* p = &x;     // указатель хранит адрес x
+
+x хранит 42
+p хранит место в памяти, где лежит 42
+& → “взять адрес”
+* → “разыменовать” (получить значение по адресу)
+
+std::cout << *p;  // 42
+
+
+int x = 10;
+int* ptr = &x; // указатель на x
+*ptr = 20;     // меняем x через указатель
+
+&x → адрес переменной
+*ptr → значение по адресу
+
+
+
