--- a/src/theory/6.md
+++ b/src/theory/6.md
@@ -39,4 +39,7 @@ int* ptr = &x; // указатель на x
 *ptr → значение по адресу
 
 
+Одним из наиболее важных применений указателей является динамической управление памятью
+Что значит? 
+Например когда мы объявили переменную - мы выделили для неё статическую память.Компилятор знает какое пространство в памяти потребуется. Однако реальные приложения в основном создают переменные и объекты в памяти во время выполнения. Это и называется динамичесим управлением памятью.
 
