--- a/src/theory/6.md
+++ b/src/theory/6.md
@@ -43,3 +43,9 @@ int* ptr = &x; // указатель на x
 Что значит? 
 Например когда мы объявили переменную - мы выделили для неё статическую память.Компилятор знает какое пространство в памяти потребуется. Однако реальные приложения в основном создают переменные и объекты в памяти во время выполнения. Это и называется динамичесим управлением памятью.
 
+Ссылки / References 
+- Это особая категория типом данных. Ссылки являются псевдонимами Существующих переменных.
+Поэтому ссылка становится альтернативным именем переменной.
+Чтобы объявить ссылку используем нужный тип за которым следует &.
+
+
