--- a/src/theory/6.md
+++ b/src/theory/6.md
@@ -49,3 +49,18 @@ int* ptr = &x; // указатель на x
 Чтобы объявить ссылку используем нужный тип за которым следует &.
 
 
+
+
+Векторы 
+
+STL векторы.
+STL — это часть стандартной библиотеки,
+а std::vector — один из контейнеров STL
+
+
+это контейнеры динамического размера. Это значит что мы можем изменить их размер если нам нужно добавить данные в колекцию или удалить элементы
+
+Память необходимая для векторов, управляется вместо нас. Не не нужно ни выделять ни освобождать память вручную. Объекты которые мы помещаем в свои векторы выделяют память вручную 
+
+Вектор - универсальный класс-контейнер. Значит они могут хранить любой тип элементов, целых чисел, чисел с плавающей запятой, строк или даже собственных классов. 
+
